# ruggine

./: Cargo.toml  README.md
G14-master/client/: Cargo.toml
G14-master/common/src/: lib.rs
G14-master/gui_client/: Cargo.toml
G14-master/gui_client/src/: main.rs  network.rs
G14-master/logging/: Cargo.toml
G14-master/logging/src/: cpu.rs  lib.rs
G14-master/release/documents/: MANUALE_UTENTE.md  tests_and_benchmark.md
G14-master/server/: Cargo.toml
client/src/: main.rs
release/macOS/: server
server/src/: main.rs
