[package]
name = "gui_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
futures = "0.3"
iced = { version = "0.10", features = ["tokio"] }
sysinfo = "0.28"
common = { path = "../common" } # modifica path se necessario
